# cmake-test

./: CMakeLists.txt  README.MD
include/: func.h  sort.h
source/: func.c  main.c  sort.c
tool/: main.py
